--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,7 @@ tesina:
   corso: "Musica Elettronica DCSL34"
 
   # Dati specifici dell'esame
-  esame: "Storia della musica elettrocustica e \\Storia delle tecnologie elettroacustiche"
+  esame: "Storia della musica elettrocustica e Storia delle tecnologie elettroacustiche"
   data: "15/03/2026"
 
   
