--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,7 @@
-# Mettiamo tutto sotto una chiave principale 'tesina'
 tesina:
-  titolo: "Cosa è Live Electronics"
-  sottotitolo: "Come tecnologia e contesti istituzionali hanno trasformato il pensiero compositivo nel Live Electronics: da Mumma e Nono all'IRCAM agli approcci ecosistemici"
-  autore: "Giulio Romano De Mattia" # Usiamo 'autore' invece di 'candidato.nome' per coerenza con Pandoc
+  titolo: "Live Electronics: un racconto plurale. Oltre i confini di una storiografia eurocentrica."
+  sottotitolo: "Tecnologia, contesti istituzionali e trasformazione il pensiero musicale e della prassi nel Live Electronics: Le storie "
+  autore: "Giulio Romano De Mattia" 
   
   # Dati per il conservatorio
   conservatorio: "Conservatorio A. Casella"
