--- a/.github/workflows/assembla_doc_template.yml
+++ b/.github/workflows/assembla_doc_template.yml
@@ -18,6 +18,32 @@ jobs:
       image: ghcr.io/dmgiulioromano/latex-docker-ubuntu:2025.1-small
 
     steps:
+
+    - name: pino
+      run: |
+    
+        apt-get update -y
+        apt-get install -y ca-certificates curl gnupg
+
+        # 2. Crea directory per le chiavi GPG
+        mkdir -p /etc/apt/keyrings
+
+        # 3. Scarica e aggiungi la chiave GPG di NodeSource
+        curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | sudo gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
+
+        # 4. Aggiungi il repository NodeSource (Node.js 20 LTS)
+        NODE_MAJOR=20
+        echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | sudo tee /etc/apt/sources.list.d/nodesource.list
+        
+        # 5. Installa Node.js (include npm automaticamente)
+        sudo apt-get update
+        sudo apt-get install -y nodejs
+        
+        # 6. Verifica l'installazione
+        node -v    # dovrebbe mostrare v20.x.x
+        npm -v     # dovrebbe mostrare 10.x.x
+
+
     - name: Install all dependencies in one step
       run: |
         # Update apt solo una volta
