--- a/.github/workflows/assembla_doc_template.yml
+++ b/.github/workflows/assembla_doc_template.yml
@@ -36,8 +36,8 @@ jobs:
         echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | sudo tee /etc/apt/sources.list.d/nodesource.list
         
         # 5. Installa Node.js (include npm automaticamente)
-        sudo apt-get update
-        sudo apt-get install -y nodejs
+        apt-get update
+        apt-get install -y nodejs
         
         # 6. Verifica l'installazione
         node -v    # dovrebbe mostrare v20.x.x
