--- a/.github/workflows/assembla_doc_template.yml
+++ b/.github/workflows/assembla_doc_template.yml
@@ -19,30 +19,26 @@ jobs:
 
     steps:
 
-    - name: pino
+    - name: npm for mermaid
       run: |
-    
         apt-get update -y
         apt-get install -y ca-certificates curl gnupg
-
         # 2. Crea directory per le chiavi GPG
         mkdir -p /etc/apt/keyrings
-
         # 3. Scarica e aggiungi la chiave GPG di NodeSource
         curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
-
         # 4. Aggiungi il repository NodeSource (Node.js 20 LTS)
         NODE_MAJOR=20
-        echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list
-        
+        echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list  
         # 5. Installa Node.js (include npm automaticamente)
         apt-get update
         apt-get install -y nodejs
-        
-        # 6. Verifica l'installazione
-        node -v    # dovrebbe mostrare v20.x.x
-        npm -v     # dovrebbe mostrare 10.x.x
-
+        # Installa mermaid-filter globalmente
+        npm install --global mermaid-filter
+        # Verifica installazione
+        mermaid-filter --help
+        # Installa anche mermaid-cli (necessario per mermaid-filter)
+        npm install --global @mermaid-js/mermaid-cli
 
     - name: Install all dependencies in one step
       run: |
