--- a/.github/workflows/assembla_doc_template.yml
+++ b/.github/workflows/assembla_doc_template.yml
@@ -38,6 +38,31 @@ jobs:
         # Installa anche mermaid-cli (necessario per mermaid-filter)
         npm install --global @mermaid-js/mermaid-cli
 
+    - name: Install Puppeteer/Chrome dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          libgobject-2.0-0 \
+          libglib2.0-0 \
+          libnss3 \
+          libx11-xcb1 \
+          libxcomposite1 \
+          libxcursor1 \
+          libxdamage1 \
+          libxext6 \
+          libxfixes3 \
+          libxi6 \
+          libxtst6 \
+          libpangocairo-1.0-0 \
+          libpango-1.0-0 \
+          libcups2 \
+          libxrandr2 \
+          libasound2 \
+          libatk1.0-0 \
+          libatk-bridge2.0-0 \
+          libgbm1 \
+          libgtk-3-0
+          
     - name: Install all dependencies in one step
       run: |
         # Update apt solo una volta
