--- a/.github/workflows/assembla_doc_template.yml
+++ b/.github/workflows/assembla_doc_template.yml
@@ -40,8 +40,8 @@ jobs:
 
     - name: Install Puppeteer/Chrome dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y \
+        apt-get update
+        apt-get install -y \
           libgobject-2.0-0 \
           libglib2.0-0 \
           libnss3 \
