--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 tesina:
-  titolo: "Live Electronics: un racconto plurale. Oltre i confini di una storiografia eurocentrica."
-  sottotitolo: "Tecnologia, contesti istituzionali e trasformazione il pensiero musicale e della prassi nel Live Electronics: Le storie "
+  titolo: "Live Electronics: un racconto plurale."
+  sottotitolo: "Oltre i confini di una storiografia eurocentrica."
   autore: "Giulio Romano De Mattia" 
   
   # Dati per il conservatorio
