--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 tesina:
-  titolo: "Live Electronics: un racconto plurale."
-  sottotitolo: "Oltre i confini di una storiografia eurocentrica."
+  titolo: "Live Electronics"
+  sottotitolo: "Un racconto plurale."
   autore: "Giulio Romano De Mattia" 
   
   # Dati per il conservatorio
