--- a/.github/workflows/assembla_doc_template.yml
+++ b/.github/workflows/assembla_doc_template.yml
@@ -17,13 +17,10 @@ jobs:
     container:
       image: ghcr.io/dmgiulioromano/latex-docker-ubuntu:2025.1-small
 
-    steps:         
+    steps:
     - name: Install all dependencies in one step
       run: |
-        # Update apt solo una volta
         apt-get update
-        
-        # Installa dipendenze base
         apt-get install -y git python3-pip fonts-liberation wget
         pip install pyyaml
         tlmgr update --self
@@ -31,32 +28,21 @@ jobs:
         
         # Download in parallelo (background jobs)
         PANDOC_VERSION=3.8.2
-        PANDOC_XREF_VERSION=0.3.22
-        
+        PANDOC_XREF_VERSION=0.3.22        
         wget https://github.com/jgm/pandoc/releases/download/${PANDOC_VERSION}/pandoc-${PANDOC_VERSION}-1-amd64.deb &
         PANDOC_PID=$!
-        
         wget https://github.com/lierdakil/pandoc-crossref/releases/download/v${PANDOC_XREF_VERSION}/pandoc-crossref-Linux-X64.tar.xz &
-        CROSSREF_PID=$!
-        
+        CROSSREF_PID=$!        
         # Aspetta che i download finiscano
         wait $PANDOC_PID
-        wait $CROSSREF_PID
-        
-        # Installazioni in sequenza (veloci comunque)
+        wait $CROSSREF_PID        
         apt-get install -y ./pandoc-${PANDOC_VERSION}-1-amd64.deb
         tar -xJf pandoc-crossref-Linux-X64.tar.xz
         mv pandoc-crossref /usr/local/bin/
-        
-        # Cleanup
         rm pandoc-${PANDOC_VERSION}-1-amd64.deb pandoc-crossref-Linux-X64.tar.xz
-        
         # Verifica
         fc-cache -f -v
-        pandoc --version
-        pandoc-crossref --version
-        fc-list | grep -i "Liberation Sans"
-        
+     
     - name: Checkout repository
       uses: actions/checkout@v4
 
@@ -89,18 +75,11 @@ jobs:
 
     - name: Build PDF with Pandoc
       run: |
-        TITLE=$(sed -n '/^---$/,/^---$/p' README.md | grep '^title:' | head -n1 | sed 's/title:[[:space:]]*//; s/^ *//; s/ *$//; s/[*]//g')
+        TITLE=$(grep '^title:' metadata.yaml | cut -d':' -f2- | sed 's/^[[:space:]]*//; s/[[:space:]]*$//; s/[*]//g')
         SAFE_TITLE=$(echo "$TITLE" | tr ' ' '_' | tr -cd '[:alnum:]_')
         TIMESTAMP=$(date +%Y%m%d_%H%M%S)
-        #PDF_NAME="${SAFE_TITLE}-${TIMESTAMP}.pdf"
         PDF_NAME="${SAFE_TITLE}-CONSAQ-${TIMESTAMP}.pdf"
-        pandoc README.md \
-          --pdf-engine=xelatex \
-          --template=styles/templatePandoc.latex \
-          --syntax-highlighting=tango \
-          --filter pandoc-crossref \
-          --lua-filter=lua-filters/multibib.lua \
-          -o "$PDF_NAME"
+        pandoc --defaults styles/defaults.yml README.md -o "$PDF_NAME"
         echo "PDF_NAME=$PDF_NAME" >> $GITHUB_ENV
         mkdir -p pages_artifact
         cp "${PDF_NAME}" pages_artifact/latest.pdf
