--- a/styles/defaults.yml
+++ b/styles/defaults.yml
@@ -4,7 +4,7 @@ to: pdf
 pdf-engine: xelatex
 
 metadata-file:
-  - metadata.yaml
+  - metadata.yml
   - bibliography.yaml
 
 template: styles/template.latex
